# config/routes/api/notification_preferences_routes.rb
@@ -1,0 +1,3 @@
+# frozen_string_literal: true
+
+resources :notification_preferences, path: "notification-preferences", only: %i[index update]
